[gd_scene load_steps=6 format=3 uid="uid://1xc22moju4io"]

[ext_resource type="Script" path="res://enemy/bomb.gd" id="1_qb1r7"]
[ext_resource type="Texture2D" uid="uid://41055l75g2xg" path="res://enemy/bomb.png" id="2_bjw03"]
[ext_resource type="Texture2D" uid="uid://cu2mjsf0logd7" path="res://enemy/bomb_radius.png" id="2_uibyy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjnmo"]
size = Vector2(58, 125)

[sub_resource type="CircleShape2D" id="CircleShape2D_rvrnx"]
radius = 579.34

[node name="Bomb" type="RigidBody2D" groups=["shootable"]]
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_qb1r7")

[node name="BombRadiusSprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2.4, 2.4)
texture = ExtResource("2_uibyy")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.46, 0.46)
texture = ExtResource("2_bjw03")

[node name="BombCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -15.5)
shape = SubResource("RectangleShape2D_fjnmo")

[node name="ExplosionArea" type="Area2D" parent="."]
collision_mask = 5

[node name="ExplosionCircle" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_rvrnx")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
